package src;

public interface DatosArbol {
    public String getInformacion();
}
