package src;

public enum Horario {
    DESAYUNO(1,"Desayuno"),
    MEDIA_MAÑANA(2, "Media mañana"),
    ALMUERZO(3, "Almuerzo"),
    MERIENDA(4, "Merienda"),
    CENA(5, "Cena");

    private int code;
    private String description;
    private Horario(int code, String description){
        this.code=code;
        this.description=description;
    }
    public int getCode() {
        return code;
    }
    public String getDescription() {
        return description;
    }
    public void setCode(int code) {
        this.code = code;
    }
    public void setDescription(String description) {
        this.description = description;
    }

}
